cluster/yasp/postgres-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    app: postgres
    deploymentconfig: postgres
    tier: backend
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 0
      maxUnavailable: 1
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: postgres
        deploymentconfig: postgres
        tier: backend
    spec:
      volumes:
      - name: postgres
        gcePersistentDisk:
          pdName: disk-postgres
          fsType: ext4
      - name: postgres-config
        secret:
          secretName: postgres-config
      containers:
      - name: postgres
        image: postgres:9
        command: [ "sh", "-c", "postgres -D config_file=/etc/postgres/postgresql.conf hba_file=/etc/postgres/hba.conf" ]
        imagePullPolicy: Always
        ports:
        volumeMounts:
        - name: postgres
          mountPath: /var/lib/postgresql/data
        - name: postgres-config
          mountPath: /etc/postgres
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
