cluster/yasp/redis-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    app: redis
    deploymentconfig: redis
    tier: backend
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 0
      maxUnavailable: 1
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: redis
        deploymentconfig: redis
        tier: backend
    spec:
      volumes:
      - name: redis
        gcePersistentDisk:
          pdName: disk-redis
          fsType: ext4
      containers:
      - name: redis
        image: redis:3
        command: [ "sh", "-c", "redis-server /etc/redis/redis.conf" ]
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: redis-persistent-storage
          mountPath: /var/lib/redis
        - name: redis-config
          mountPath: /etc/redis
      volumes:
      - name: redis-persistent-storage
        gcePersistentDisk:
          pdName: disk-redis
          fsType: ext4
      - name: redis-config
        secret:
          secretName: redis-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
