cluster/yasp/web-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    app: web
    deploymentconfig: web
    tier: frontend
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 2
      maxUnavailable: 1
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: web
        deploymentconfig: web
        tier: frontend
    spec:
      volumes:
      - name: api-keys
        secret:
          secretName: api-keys
      containers:
      - args: [ "web.js" ]
        # This line gets updated automatically, so ignore it.
        image: 10.0.5.122:5000/yasp/yasp
        imagePullPolicy: Always
        name: yasp
        ports:
        - containerPort: 5000
          name: web
        volumeMounts:
        # mount the secrets
        - name: api-keys
          readOnly: true
          mountPath: /etc/yasp-api-keys
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - yasp
      from:
        kind: ImageStreamTag
        name: yasp:latest
    type: ImageChange
