cluster/yasp/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: backend
  name: front
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: web
  selector:
    app: web
    tier: backend
  type: NodePort
