cluster/yasp/fullhistory.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: backend
  name: fullhistory
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: web
