cluster/yasp/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
    tier: backend
  name: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
    tier: backend
