cluster/yasp/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
    tier: infra
  name: postgres
spec:
  selector:
    app: postgres
    tier: infra
  ports:
  - port: 5432
    targetPort: 5432
----
apiVersion: v1
kind: ReplicationController
metadata:
  labels:
    app: postgres
    tier: infra
  name: postgres
  namespace: yasp
spec:
  replicas: 1
  selector:
    app: postgres
    tier: infra
  template:
    metadata:
      labels:
        app: postgres
        tier: infra
    spec:
      volumes:
      - name: postgres
        gcePersistentDisk:
          pdName: disk-postgres
          fsType: ext4
      - name: postgres-config
        secret:
          secretName: postgres-config
      containers:
      - name: postgres
        image: postgres:9.4
        env:
          - name: PGDATA
            value: /var/lib/postgresql/data/pgdata
        args: ["postgres", "--config_file=/etc/postgresql/postgresql.conf"]
        imagePullPolicy: Always
        resources:
          requests:
            memory: "12G"
        volumeMounts:
        - name: postgres
          mountPath: /var/lib/postgresql/data
        - name: postgres-config
          mountPath: /etc/postgresql
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
