cluster/yasp/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: backend
  name: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
