cluster/yasp/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    tier: backend
  name: redis
spec:
  selector:
    app: redis
    tier: backend
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
