cluster/yasp/redis.yaml
apiVersion: v1
kind: ReplicationController
metadata:
  labels:
    app: redis
    tier: infra
  name: redis
  namespace: yasp
spec:
  replicas: 1
  selector:
    app: redis
    tier: infra
  template:
    metadata:
      labels:
        app: redis
        tier: infra
    spec:
      volumes:
      - name: redis
        gcePersistentDisk:
          pdName: disk-redis
          fsType: ext4
      - name: redis-config
        secret:
          secretName: redis-config
      containers:
      - name: redis
        image: redis:3.0
        command: ["redis-server", "/etc/redis/redis.conf"]
        imagePullPolicy: Always
        resources:
          requests:
            memory: "12G"
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: redis
          mountPath: /var/lib/redis
        - name: redis-config
          mountPath: /etc/redis
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
----
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    tier: infra
  name: redis
spec:
  selector:
    app: redis
    tier: backend
  ports:
  - port: 6379
    targetPort: redis
