cluster/yasp/scanner.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: frontend
  name: scanner
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: web
