cluster/yasp/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: backend
  name: web
spec:
  ports:
  - nodePort: 30246
    port: 80
    targetPort: web
  selector:
    app: web
    tier: backend
  type: NodePort
