cluster/yasp/web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    tier: backend
  name: web
spec:
  selector:
    app: web
    tier: backend
  ports:
  - nodePort: 30246
    port: 80
    targetPort: web
  #type: NodePort
  type: LoadBalancer
----
apiVersion: v1
kind: ReplicationController
metadata:
  labels:
    app: web
    tier: backend
  name: web
spec:
  replicas: 1
  selector:
    app: web
    tier: backend
  template:
    metadata:
      labels:
        app: web
        tier: backend
    spec:
      volumes:
      - name: api-keys
        secret:
          secretName: api-keys
      containers:
      - name: yasp
        image: yasp/yasp:latest
        args: [ "node", "web.js" ]
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: web
        volumeMounts:
        - name: api-keys
          readOnly: true
          mountPath: /etc/yasp-api-keys
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
